Fix flexbox layout issue so it works for 2 cards. Fix JS card height issue.

--- a/app/assets/sass/patterns/_card.scss
+++ b/app/assets/sass/patterns/_card.scss
@@ -1,7 +1,6 @@
 .card {
   border: 1px solid $panel-colour;
   font-size: 16px;
-  margin-bottom: 1em;
 
   &.inactive {
     color: $secondary-text-colour;
@@ -74,6 +73,7 @@
       border-bottom: 1px solid #C7DCEB;
       color: $link-colour;
       text-decoration: none;
+      line-height: 1.5em;
 
       &:link,
       &:visited {
